--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,47 +7,17 @@
     tools:context=".MainActivity">
 
     <com.google.android.material.button.MaterialButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Pause"
-        android:id="@+id/BtnPause"
-        app:layout_constraintTop_toBottomOf="@id/BtnPlay"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
+        android:layout_width="291dp"
+        android:layout_height="85dp"
+        android:background="@drawable/logo"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        />
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/BtnPlay"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Play"
-        app:layout_constraintTop_toBottomOf="@id/BtnPause"
-        app:layout_constraintBottom_toTopOf="@id/BtnPause"
-        app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        tools:layout_editor_absoluteX="2dp" />
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/BtnLogin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Login"
-        app:layout_constraintTop_toBottomOf="@id/BtnLogOff"
-        app:layout_constraintBottom_toTopOf="@id/BtnPlay"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        tools:layout_editor_absoluteX="2dp" />
+        android:id="@+id/login"
+        android:onClick="Login"
+     />
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/BtnLogOff"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Déconnexion"
-        app:layout_constraintTop_toBottomOf="@id/BtnLogin"
-        app:layout_constraintBottom_toTopOf="@id/BtnLogin"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        tools:layout_editor_absoluteX="2dp" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
