--- a/app/src/main/res/layout/activity_main_login.xml
+++ b/app/src/main/res/layout/activity_main_login.xml
@@ -32,7 +32,9 @@
         android:layout_margin="10dp"
         app:layout_constraintTop_toBottomOf="@+id/Hello"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toRightOf="parent"
+        android:onClick="GoTo"
+        />
 
     <ListView
         android:id="@+id/recipe_list_view"
