--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/activity_main"
     tools:context=".MainActivity">
+
+    <TextView
+        android:id="@+id/token_text_view"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:textColor="@color/black"
+        tools:text="Token: 089d841ccc194c10a77afad9e1c11d54"
+        app:layout_constraintBottom_toTopOf="@+id/btn"/>
+
+    <Button
+        android:id="@+id/btn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:onClick="onRequestTokenClicked"
+        android:text="Request Token"
+        app:layout_constraintBottom_toTopOf="@+id/login"/>
 
     <com.google.android.material.button.MaterialButton
         android:layout_width="291dp"
@@ -26,6 +45,21 @@
         android:layout_margin="10dp"
     />
 
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="8dp"
+        android:layout_weight="1"
+        app:layout_constraintTop_toBottomOf="@+id/progressBar"
+        >
 
+        <TextView
+            android:id="@+id/response_text_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="10sp"
+            tools:text="Line 1\nLine 2\nLine 3" />
+
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
