--- a/app/src/main/res/layout/activity_main_get_data.xml
+++ b/app/src/main/res/layout/activity_main_get_data.xml
@@ -7,7 +7,24 @@
     tools:context=".MainActivity_getData">
 
     <TextView
-        android:id="@+id/test"
+        android:id="@+id/userName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/recyclerView"
+        android:layout_marginVertical="50dp"
+        android:textSize="25dp"
+        android:gravity="center"
+        android:textAlignment="center"
+        />
+
+    <androidx.recyclerview.widget.RecyclerView
+        app:layout_constraintTop_toBottomOf="@id/userName"
+        app:layout_constraintStart_toStartOf="parent"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp"
+        android:id="@+id/recyclerView"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
