--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,8 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="8dp"
-        android:onClick="playToMusic"
-        android:text="Request User"
+        android:onClick="onGetUserPlaylistClicked"
+        android:text="List Playlist"
         app:layout_constraintBottom_toTopOf="@+id/btnUser"/>
 
 
@@ -33,16 +33,8 @@
         android:layout_margin="8dp"
         android:textColor="@color/black"
         tools:text="Token: 089d841ccc194c10a77afad9e1c11d54"
-        app:layout_constraintBottom_toTopOf="@+id/btn"/>
-
-    <Button
-        android:id="@+id/btn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:onClick="onRequestTokenClicked"
-        android:text="Request Token"
         app:layout_constraintBottom_toTopOf="@+id/login"/>
+
 
     <com.google.android.material.button.MaterialButton
         android:layout_width="291dp"
@@ -64,21 +56,12 @@
         android:layout_margin="10dp"
     />
 
-    <ScrollView
+    <ListView
+        android:id="@+id/playlist"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:layout_weight="1"
         app:layout_constraintTop_toBottomOf="@+id/progressBar"
-        >
+        tools:listitem="@layout/item_playlist"/>
 
-        <TextView
-            android:id="@+id/response_text_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="10sp"
-            tools:text="Line 1\nLine 2\nLine 3" />
-
-    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
