--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -63,5 +63,17 @@
         app:layout_constraintTop_toBottomOf="@+id/progressBar"
         tools:listitem="@layout/item_playlist"/>
 
+    <Button
+        android:id="@+id/btnSeePlaylists"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="See playlists"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="50dp"
+        tools:layout_editor_absoluteX="159dp"
+        tools:layout_editor_absoluteY="52dp" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
