--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,72 +8,9 @@
     tools:context=".MainActivity">
 
     <Button
-        android:id="@+id/btnPlay"
+        android:id="@+id/Game"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:onClick="onGetUserPlaylistClicked"
-        android:text="List Playlist"
-        app:layout_constraintBottom_toTopOf="@+id/btnUser"/>
-
-
-    <Button
-        android:id="@+id/btnUser"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:onClick="onGetUserProfilClicked"
-        android:text="Request User"
-        app:layout_constraintBottom_toTopOf="@+id/token_text_view"/>
-
-    <TextView
-        android:id="@+id/token_text_view"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:textColor="@color/black"
-        tools:text="Token: 089d841ccc194c10a77afad9e1c11d54"
-        app:layout_constraintBottom_toTopOf="@+id/login"/>
-
-
-    <com.google.android.material.button.MaterialButton
-        android:layout_width="291dp"
-        android:layout_height="85dp"
-        android:background="@drawable/logo"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:id="@+id/login"
-     />
-
-    <androidx.core.widget.ContentLoadingProgressBar
-        android:id="@+id/progressBar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        style="@android:style/Widget.Material.ProgressBar.Large"
-        app:layout_constraintTop_toBottomOf="@+id/login"
-        android:layout_margin="10dp"
-    />
-
-    <ListView
-        android:id="@+id/playlist"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@+id/progressBar"
-        tools:listitem="@layout/item_playlist"/>
-
-    <Button
-        android:id="@+id/btnSeePlaylists"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="See playlists"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="50dp"
-        tools:layout_editor_absoluteX="159dp"
-        tools:layout_editor_absoluteY="52dp" />
-
-
+        android:text="Game"
+        app:layout_constraintBottom_toBottomOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
