--- a/app/src/main/res/layout/activity_in_game.xml
+++ b/app/src/main/res/layout/activity_in_game.xml
@@ -128,24 +128,38 @@
         android:id="@+id/viewRep"
         android:layout_width="400dp"
         android:layout_height="200dp"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:visibility="gone"
         android:background="#DDAAAAFF"
-        android:paddingBottom="20dp">
+        android:paddingBottom="20dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible">
 
         <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/questRep"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/btnRepGood"
             android:text="Est-ce la bonne réponse ?"
+            android:textColor="@color/black"
             android:textSize="24dp"
-            android:textColor="@color/black"/>
+            app:layout_constraintBottom_toTopOf="@id/rep"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/rep"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Réponse"
+            android:textColor="@color/black"
+            android:textSize="18dp"
+            app:layout_constraintBottom_toTopOf="@id/btnRepGood"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/questRep" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btnRepGood"
@@ -154,9 +168,9 @@
             android:text="Bonne&#10;réponse"
             android:textSize="10dp"
             app:cornerRadius="15dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/btnRepBad"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            app:layout_constraintStart_toStartOf="parent" />
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btnRepBad"
@@ -165,9 +179,9 @@
             android:text="Mauvaise&#10;réponse"
             android:textSize="10dp"
             app:cornerRadius="15dp"
-            app:layout_constraintStart_toEndOf="@id/btnRepGood"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"/>
+            app:layout_constraintStart_toEndOf="@id/btnRepGood" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
