--- a/app/src/main/res/layout/activity_in_game.xml
+++ b/app/src/main/res/layout/activity_in_game.xml
@@ -44,8 +44,8 @@
         android:layout_height="75dp"
         android:layout_marginTop="25dp"
         android:background="#A8999999"
-        android:rotation="180"
         android:gravity="center"
+        android:rotation="180"
         android:textAlignment="center"
         app:layout_constraintEnd_toStartOf="@id/btnP4Buzz"
         app:layout_constraintStart_toEndOf="@id/btnP3Buzz"
@@ -113,16 +113,16 @@
 
     <ProgressBar
         android:id="@+id/progressBarTimer"
+        style="?android:progressBarStyleHorizontal"
         android:layout_width="100dp"
         android:layout_height="100dp"
+        android:indeterminate="false"
+        android:progressDrawable="@drawable/circle"
+        android:rotation="-90"
         app:layout_constraintBottom_toTopOf="@id/btnP2Buzz"
         app:layout_constraintEnd_toEndOf="@id/btnP2Buzz"
         app:layout_constraintStart_toStartOf="@id/btnP2Buzz"
-        app:layout_constraintTop_toBottomOf="@id/btnP4Buzz"
-        android:indeterminate="false"
-        style="?android:progressBarStyleHorizontal"
-        android:progressDrawable="@drawable/circle"
-        android:rotation="-90"/>
+        app:layout_constraintTop_toBottomOf="@id/btnP4Buzz" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/viewRep"
@@ -189,60 +189,62 @@
         android:id="@+id/txtPtsP1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@id/btnP1Buzz"
-        app:layout_constraintStart_toStartOf="@id/btnP1Buzz"
-        app:layout_constraintEnd_toEndOf="@id/btnP1Buzz"
         android:text="0"
-        android:textSize="14dp"
         android:textColor="@color/white"
-        android:textStyle="bold"/>
+        android:textSize="14dp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@id/btnP1Buzz"
+        app:layout_constraintEnd_toEndOf="@id/btnP1Buzz"
+        app:layout_constraintStart_toStartOf="@id/btnP1Buzz" />
 
     <TextView
         android:id="@+id/txtPtsP2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintBottom_toTopOf="@id/btnP2Buzz"
-        app:layout_constraintStart_toStartOf="@id/btnP2Buzz"
-        app:layout_constraintEnd_toEndOf="@id/btnP2Buzz"
         android:text="0"
-        android:textSize="14dp"
         android:textColor="@color/white"
-        android:textStyle="bold"/>
+        android:textSize="14dp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@id/btnP2Buzz"
+        app:layout_constraintEnd_toEndOf="@id/btnP2Buzz"
+        app:layout_constraintStart_toStartOf="@id/btnP2Buzz" />
 
     <TextView
         android:id="@+id/txtPtsP3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/btnP3Buzz"
-        app:layout_constraintStart_toStartOf="@id/btnP3Buzz"
-        app:layout_constraintEnd_toEndOf="@id/btnP3Buzz"
+        android:rotation="180"
         android:text="0"
-        android:textSize="14dp"
         android:textColor="@color/white"
-        android:textStyle="bold"/>
+        android:textSize="14dp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@id/btnP3Buzz"
+        app:layout_constraintStart_toStartOf="@id/btnP3Buzz"
+        app:layout_constraintTop_toBottomOf="@id/btnP3Buzz" />
 
     <TextView
         android:id="@+id/txtPtsP4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/btnP4Buzz"
-        app:layout_constraintStart_toStartOf="@id/btnP4Buzz"
-        app:layout_constraintEnd_toEndOf="@id/btnP4Buzz"
+        android:rotation="180"
         android:text="0"
-        android:textSize="14dp"
         android:textColor="@color/white"
-        android:textStyle="bold"/>
+        android:textSize="14dp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="@id/btnP4Buzz"
+        app:layout_constraintStart_toStartOf="@id/btnP4Buzz"
+        app:layout_constraintTop_toBottomOf="@id/btnP4Buzz" />
 
     <TextView
         android:id="@+id/txtRound"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/btnP3Buzz"
-        app:layout_constraintStart_toStartOf="@id/btnP1Buzz"
-        app:layout_constraintEnd_toEndOf="@id/btnP1Buzz"
-        app:layout_constraintBottom_toTopOf="@id/btnP1Buzz"
-        android:textSize="24dp"
         android:textColor="@color/white"
-        android:textStyle="bold"/>
+        android:textSize="24dp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@id/btnP1Buzz"
+        app:layout_constraintEnd_toEndOf="@id/btnP1Buzz"
+        app:layout_constraintStart_toStartOf="@id/btnP1Buzz"
+        app:layout_constraintTop_toBottomOf="@id/btnP3Buzz" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
