string resources added

--- a/app/src/main/res/layout/activity_endgame_stats.xml
+++ b/app/src/main/res/layout/activity_endgame_stats.xml
@@ -21,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="Player 1 :"
+            android:text="@string/joueur_1"
             android:textAlignment="center"
             android:textStyle="bold" />
 
@@ -50,7 +50,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="Player 2 :"
+            android:text="@string/joueur_2"
             android:textAlignment="center"
             android:textStyle="bold" />
 
@@ -79,7 +79,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="Player 3 :"
+            android:text="@string/joueur_3"
             android:textAlignment="center"
             android:textStyle="bold" />
 
@@ -108,7 +108,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="Player 4 :"
+            android:text="@string/joueur_4"
             android:textAlignment="center"
             android:textStyle="bold" />
 
@@ -127,7 +127,7 @@
         android:id="@+id/btnNewGame"
         android:layout_width="200dp"
         android:layout_height="75dp"
-        android:text="Nouvelle Partie"
+        android:text="@string/nouvelle_partie"
         app:cornerRadius="15dp"
         app:strokeColor="@color/black"
         app:strokeWidth="2dp"
