--- a/app/src/main/res/layout/activity_in_game.xml
+++ b/app/src/main/res/layout/activity_in_game.xml
@@ -58,7 +58,7 @@
         android:layout_marginTop="25dp"
         android:layout_marginEnd="25dp"
         android:rotation="180"
-        android:text="P4"
+        android:text="@string/p4"
         android:textSize="24dp"
         app:cornerRadius="15dp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -74,7 +74,7 @@
         android:layout_height="75dp"
         android:layout_marginStart="25dp"
         android:layout_marginBottom="25dp"
-        android:text="P1"
+        android:text="@string/p1"
         android:textSize="24dp"
         app:cornerRadius="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -102,7 +102,7 @@
         android:layout_height="75dp"
         android:layout_marginEnd="25dp"
         android:layout_marginBottom="25dp"
-        android:text="P2"
+        android:text="@string/p2"
         android:textSize="24dp"
         app:cornerRadius="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -141,7 +141,7 @@
             android:id="@+id/questRep"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Est-ce la bonne réponse ?"
+            android:text="@string/est_ce_la_bonne_r_ponse"
             android:textColor="@color/black"
             android:textSize="24dp"
             app:layout_constraintBottom_toTopOf="@id/rep"
@@ -153,7 +153,7 @@
             android:id="@+id/rep"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Réponse"
+            android:text="@string/reponse"
             android:textColor="@color/black"
             android:textSize="18dp"
             app:layout_constraintBottom_toTopOf="@id/btnRepGood"
@@ -165,7 +165,7 @@
             android:id="@+id/btnRepGood"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Bonne&#10;réponse"
+            android:text="@string/bonne_reponse"
             android:textSize="10dp"
             app:cornerRadius="15dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -176,7 +176,7 @@
             android:id="@+id/btnRepBad"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Mauvaise&#10;réponse"
+            android:text="@string/mauvaise_reponse"
             android:textSize="10dp"
             app:cornerRadius="15dp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -242,6 +242,7 @@
         android:textColor="@color/white"
         android:textSize="24dp"
         android:textStyle="bold"
+        android:text="@string/round"
         app:layout_constraintBottom_toTopOf="@id/btnP1Buzz"
         app:layout_constraintEnd_toEndOf="@id/btnP1Buzz"
         app:layout_constraintStart_toStartOf="@id/btnP1Buzz"
