--- a/app/src/main/res/layout/activity_players_names.xml
+++ b/app/src/main/res/layout/activity_players_names.xml
@@ -21,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="Player 1 :"
+            android:text="@string/joueur_1"
             android:textAlignment="center"
             android:textStyle="bold" />
 
@@ -49,7 +49,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="Player 2 :"
+            android:text="@string/joueur_2"
             android:textAlignment="center"
             android:textStyle="bold" />
 
@@ -77,7 +77,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="Player 3 :"
+            android:text="@string/joueur_3"
             android:textAlignment="center"
             android:textStyle="bold" />
 
@@ -105,7 +105,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:text="Player 4 :"
+            android:text="@string/joueur_4"
             android:textAlignment="center"
             android:textStyle="bold" />
 
@@ -122,7 +122,7 @@
         android:id="@+id/btnValidateNames"
         android:layout_width="200dp"
         android:layout_height="75dp"
-        android:text="Valider"
+        android:text="@string/valider"
         android:textStyle="bold"
         app:cornerRadius="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
