--- a/app/src/main/res/layout/activity_playlists_list.xml
+++ b/app/src/main/res/layout/activity_playlists_list.xml
@@ -18,7 +18,7 @@
         android:textAlignment="center"
         android:layout_marginVertical="50dp"
         android:textSize="50dp"
-        android:text="TextView"
+        android:text="@string/salut"
         tools:layout_editor_absoluteX="181dp"
         tools:layout_editor_absoluteY="72dp"
         />
