--- a/app/src/main/res/layout/activity_players_names.xml
+++ b/app/src/main/res/layout/activity_players_names.xml
@@ -128,6 +128,8 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/P4Name" />
+        app:layout_constraintTop_toBottomOf="@id/P4Name"
+        app:strokeColor="@color/black"
+        app:strokeWidth="2dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
