--- a/app/src/main/res/layout/activity_playlists_list.xml
+++ b/app/src/main/res/layout/activity_playlists_list.xml
@@ -10,27 +10,26 @@
         android:id="@+id/username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/PlaylistsView"
-        android:gravity="center"
-        android:textAlignment="center"
         android:layout_marginVertical="50dp"
-        android:textSize="50dp"
+        android:gravity="center"
         android:text="@string/salut"
+        android:textAlignment="center"
+        android:textSize="50dp"
+        app:layout_constraintBottom_toTopOf="@id/PlaylistsView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="181dp"
-        tools:layout_editor_absoluteY="72dp"
-        />
+        tools:layout_editor_absoluteY="72dp" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/PlaylistsView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/username"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="50dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/username"
         tools:layout_editor_absoluteX="189dp"
         tools:layout_editor_absoluteY="282dp" />
 
@@ -51,10 +50,10 @@
             android:id="@+id/txtErrCo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:text="@string/DeconnecteJeuArrete"
             android:textColor="@color/black"
             android:textSize="24dp"
-            android:gravity="center"
             app:layout_constraintBottom_toTopOf="@id/btnOkQuit"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
