--- a/app/src/main/res/layout/activity_endgame_stats.xml
+++ b/app/src/main/res/layout/activity_endgame_stats.xml
@@ -129,12 +129,12 @@
         android:layout_height="75dp"
         android:text="@string/nouvelle_partie"
         app:cornerRadius="15dp"
-        app:strokeColor="@color/black"
-        app:strokeWidth="2dp"
-        app:layout_constraintTop_toBottomOf="@id/P4Stats"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/P4Stats"
+        app:strokeColor="@color/black"
+        app:strokeWidth="2dp" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
